clusters/default/ittools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools-namespace
  labels:
    app: it-tools
spec:
  type: ClusterIP
  selector:
    app: it-tools
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
