clusters/default/ittools/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ittools
  namespace: it-tools-namespace
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ittools.${BASE_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: kube-system
        - name: authentik-forwardauth
          namespace: kube-system
      services:
        - name: it-tools
          port: 80
